--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.9.5"
   },
